--- a/day1.ipynb
+++ b/day1.ipynb
@@ -42,6 +42,8 @@
    ],
    "source": [
     "\n",
+    "# UPDATE　JULY 2020\n",
+    "# If you have any questions, please ask the teaching assistants for help.\n",
     "# Data for plotting\n",
     "x = np.arange(0.0, 1.0, 0.01)\n",
     "y = np.sin(2 * np.pi * x)\n",
